--- a/index.html
+++ b/index.html
@@ -16,32 +16,27 @@
             text-decoration: none;
             color: blue;
             font-size: 20px;
+            cursor: pointer;
         }
         .menu a:hover {
             text-decoration: underline;
         }
-        .instructions {
-            font-size: 16px;
-            color: gray;
-            margin-bottom: 20px;
-        }
     </style>
+    <script type="text/javascript">
+        function openCustomScheme(url) {
+            window.location.href = url;
+        }
+    </script>
 </head>
 <body>
-    <div class="instructions">
-        아래 링크를 클릭할 수 없는 경우, 링크를 복사하여 사용해 주세요:
+    <div class="menu">
+        <a onclick="openCustomScheme('iotplatform://categories?id=4172')">카테고리 이동</a>
     </div>
     <div class="menu">
-        <a href="iotplatform://categories?id=4172" onclick="return false;">카테고리 이동</a>
-        <p>iotplatform://categories?id=4172</p>
+        <a onclick="openCustomScheme('iotplatform://events?id=3')">이벤트 이동</a>
     </div>
     <div class="menu">
-        <a href="iotplatform://events?id=3" onclick="return false;">이벤트 이동</a>
-        <p>iotplatform://events?id=3</p>
-    </div>
-    <div class="menu">
-        <a href="iotplatform://orders?id=1" onclick="return false;">주문상세 이동</a>
-        <p>iotplatform://orders?id=1</p>
+        <a onclick="openCustomScheme('iotplatform://orders?id=1')">주문상세 이동</a>
     </div>
 </body>
 </html>
